tests/samples/negative/traits/trait_impl_orphan_external.ax
module trait_impl_orphan_external;

import samplelib.traits as traits;

impl traits.Visible for traits.HiddenFile {
    fn read(self: &traits.HiddenFile) -> i32 {
        return 0;
    }
}

fn main() -> i32 {
    return 0;
}
